[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Pickup/TreasureArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Pickup/Treasure.gd" type="Script" id=3]
[ext_resource path="res://Assets/Models/ScrapModel.tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=1]

[node name="TreasureGears" type="Spatial"]
script = ExtResource( 3 )

[node name="TreasureArea" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false
label_color = Color( 0.141176, 0.129412, 0.105882, 1 )

[node name="Model" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.28356, 0, 0, 0, 1.28356, 0, 0, 0, 1.28356, 0, 0, 0 )

[node name="DrillArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape" type="CollisionShape" parent="DrillArea"]
shape = SubResource( 1 )

[connection signal="animation_done" from="TreasureArea" to="." method="_on_TreasureArea_animation_done"]
[connection signal="picked_up" from="TreasureArea" to="." method="_on_TreasureArea_picked_up"]
